--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,6 +1,6 @@
 <!-- homepage hero
    ================================================== -->
-<section id="home-hero">	
+<section id="home-hero">
 
     <div class="hero-unit">
       <h1>Beauty on <br>demand</h1>
@@ -25,10 +25,10 @@
 
 <!-- homepage how-it-works
    ================================================== -->
-<section id="home-intro">	
+<section id="home-intro">
 
     <div class="intro-unit module parallax parallax-2">
-        <h1>Descarga la App</p>
+        <h1>Descarga el app</p>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 howitworks__column">
                 <img src="/images/iphone_left.png" alt="" />
@@ -53,12 +53,12 @@
 
 <!-- homepage services
    ================================================== -->
-<section id="services">	
+<section id="services">
 <div class="container">
   <h1>Elige tu servicio</p>
   <div class="row seven-cols">
 
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6" id="cs-haircuts">
       <div class="staff-photo">
         <img src="/images/deluxe_web-05.png">
       </div>
@@ -74,7 +74,7 @@
     </div>
 
     <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo">
+      <div class="staff-photo" id="cs-hairstyles">
         <img src="/images/deluxe_web-06.png">
       </div>
 
@@ -89,7 +89,7 @@
     </div>
 
     <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo">
+      <div class="staff-photo" id="cs-hair-treatments">
         <img src="/images/deluxe_web-07.png">
       </div>
 
@@ -104,7 +104,7 @@
     </div>
 
     <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo">
+      <div class="staff-photo" id="cs-makeups">
         <img src="/images/deluxe_web-08.png">
       </div>
 
@@ -119,7 +119,7 @@
     </div>
 
     <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo">
+      <div class="staff-photo" id="cs-manicures">
         <img src="/images/deluxe_web-09.png">
       </div>
 
@@ -134,7 +134,7 @@
     </div>
 
     <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo">
+      <div class="staff-photo" id="cs-pedicures">
         <img src="/images/deluxe_web-10.png">
       </div>
 
@@ -149,7 +149,7 @@
     </div>
 
     <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6 last__service">
-      <div class="staff-photo">
+      <div class="staff-photo" id="cs-beards">
         <img src="/images/deluxe_web-05.png">
       </div>
 
@@ -177,22 +177,22 @@
 
 <!-- homepage carousel
    ================================================== -->
-<section id="home-carousel">	
+<section id="home-carousel">
 
         <div class="row">
             <div class="owl-carousel owl-theme">
-                <div class="item"><img src="/images/estilo1.png"></div>
-                <div class="item"><img src="/images/estilo2.png"></div>
-                <div class="item"><img src="/images/estilo3.png"></div>
-                <div class="item"><img src="/images/estilo4.png"></div>
-                <div class="item"><img src="/images/estilo1.png"></div>
-                <div class="item"><img src="/images/estilo2.png"></div>
-                <div class="item"><img src="/images/estilo3.png"></div>
-                <div class="item"><img src="/images/estilo4.png"></div>
-                <div class="item"><img src="/images/estilo1.png"></div>
-                <div class="item"><img src="/images/estilo2.png"></div>
-                <div class="item"><img src="/images/estilo3.png"></div>
-                <div class="item"><img src="/images/estilo4.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo1.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo2.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo3.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo4.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo1.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo2.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo3.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo4.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo1.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo2.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo3.png"></div>
+                <div class="item"><img class="item-img" src="/images/estilo4.png"></div>
             </div>
             <div class="customNavigation gallery-control-wrapper">
               <a class="btn btn-wlb prevOwl gallery-control left"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
@@ -204,11 +204,11 @@
 
 <!-- homepage how-it-works
    ================================================== -->
-<section id="home-pricing">	
+<section id="home-pricing">
      <div class="container">
         <h1>PRECIOS</h1>
         <img src='/images/pricing.png'></div>
-    </div> 
+    </div>
 </section> <!-- end homepage how-it-works -->
 
 <!-- fourth sliding black bar
@@ -221,7 +221,7 @@
 
 <!-- contact form
    ================================================== -->
-<section id="contact-form">	
+<section id="contact-form">
 
     <div class="contact-unit">
         <div class="row">
@@ -246,7 +246,7 @@
 
 <!-- job openings link mobile
    ================================================== -->
-<section id="job-openings">	
+<section id="job-openings">
 
     <div class="openings-unit">
       <h1><a href='https://docs.google.com/forms/d/e/1FAIpQLSd5pwMKoEMX8ek5Lzt2vUFcaZen0de03s3fc0WI42PvqmXd-g/viewform'>BOLSA DE TRABAJO</a></h1>
