--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,7 +3,7 @@
 <section id="home-hero">
 
     <div class="hero-unit">
-      <h1>Beauty on <br>demand</h1>
+      <h1>Beauty on<br>demand</h1>
         <!--
       <input class="apple" type="image" src="/images/app_store.png"/>
       <input class="google" type="image" src="/images/google_play.png"/>
@@ -30,11 +30,11 @@
     <div class="intro-unit module parallax parallax-2">
         <h1>Descarga el app</p>
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 howitworks__column">
+            <!-- <div class="col-lg-6 col-md-6 col-sm-6 howitworks__column">
                 <img src="/images/iphone_left.png" alt="" />
-            </div>
+            </div> -->
             <div class="col-lg-6 col-md-6 col-sm-6 howitworks__column">
-                <img src="/images/iphone_right.png" alt="" />
+                <img src="/images/iphone_right.png" id="iphone" alt="" />
             </div>
         </div>
     </div>
