--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,10 @@
 /* ============================================================
   PRIMARY STRUCTURE
 ============================================================ */
+html {
+  background-color:black;
+}
+
 .container {
   max-width: 960px;
   margin: 0 auto;
@@ -592,7 +596,8 @@ html, body {
 
   .contact-unit form {
     margin-top: 30px;
-    margin-left: 0;
+    margin-bottom: 30px;
+    margin-left: -5px;
   }
 
   .contact-unit input {
@@ -600,6 +605,15 @@ html, body {
     border: 2px solid;
     width: 90vw;
     margin: 0 0 0 20px;
+  }
+
+  .contact-unit input[type="submit"] {
+    background: -webkit-linear-gradient(transparent, transparent), -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
+    border: 2px solid;
+    width: 90vw;
+    margin: 0 0 0 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
   }
 
   .contact-unit textarea {
@@ -639,5 +653,6 @@ footer div {
 @media (max-width: 480px) {
   footer div {
     margin-left: 5vw;
+    font-size: 0.7em;
   }
 }
