Make 'be deluxe' button prettier

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,6 +91,14 @@ section.module.parallax-3 {
   padding: 40px 0;
 }
 
+#be__deluxe {
+  background: -webkit-linear-gradient(transparent, transparent), -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
+  color: black !important;
+  font-size: 0.8em;
+  vertical-align: super;
+  bottom: 3px;
+}
+
 #services {
   background-color: #000;
 }
