Change carousel arrow color

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,6 +75,11 @@ section.module.parallax-3 {
 }
 */
 
+.btn-wlb {
+  background-color: rgba(0, 0, 0, 0.63) !important;
+  color: #fff6ad !important;
+}
+
 .intro-unit {
   /* The image used */
   background: #000;
