--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -1,16 +1,14 @@
 <!-- Footer
    ================================================== -->
 <footer>
-
-    <div>  
-        <br>
-        <!--
-            <div class="footer-logo"></div>
-        -->
-        <p>Contáctanos a través de <br><span>contacto@deluxe.mx</span></p>
-        &copy; Copyright 2016 Deluxe.
-        Powered by Steed.
-        <br><br>
+    <div>
+      <a href="https://fb.com/DeluxeMx"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+      <a href="https://twitter.com/DeluxeMx"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+      <a href="https://instagram.com/DeluxeMx"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <br>
+      <p>Contáctanos a través de <br><span>contacto@deluxe.mx</span></p>
+      &copy; Copyright 2016 Deluxe.
+      Powered by Steed.
+      <br><br>
     </div> <!-- end row -->
-
 </footer> <!-- end footer -->
