--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -1,14 +1,20 @@
 <!-- Footer
    ================================================== -->
 <footer>
-    <div>
+  <div>
+    <p><a href="#">Bolsa de trabajo</a></p>
+    <p><a href="#">Preguntas frecuentes</a></p>
+    <p><a href="#">Press kit</a></p>
+    <p><a href="#">Aviso de privacidad</a></p>
+    <p><a href="#">Términos y condiciones</a></p>
+    <p><a href="#">Escríbennos</a></p>
+    <div id="footer-social-icons">
       <a href="https://fb.com/DeluxeMx"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
       <a href="https://twitter.com/DeluxeMx"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
       <a href="https://instagram.com/DeluxeMx"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-      <br>
-      <p>Contáctanos a través de <br><span>contacto@deluxe.mx</span></p>
-      &copy; Copyright 2016 Deluxe.
-      Powered by Steed.
-      <br><br>
-    </div> <!-- end row -->
+    </div>
+  </div> <!-- end row -->
+  <div id="footer-copy">
+    <p>&copy; copyright 2016 Deluxe / powered by steed.</p>
+  </div> <!-- end row -->
 </footer> <!-- end footer -->
