--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -173,7 +173,11 @@
 
         <div class="row">
             <div class="owl-carousel owl-theme">
-                <div class="item"><img class="item-img" src="/images/estilo1.png"></div>
+                <div class="item"><img class="item-img" src="/images/cs-haircuts-1.png"></div>
+                <div class="item"><img class="item-img" src="/images/cs-beards-1.png"></div>
+                <div class="item"><img class="item-img" src="/images/cs-haircuts-1.png"></div>
+                <div class="item"><img class="item-img" src="/images/cs-hairstyles-1.png"></div>
+                <div class="item"><img class="item-img" src="/images/cs-makeups-1.png"></div>
             </div>
             <div class="customNavigation gallery-control-wrapper">
               <a class="btn btn-wlb prevOwl gallery-control left"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
