--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -14,26 +14,26 @@
 </section> <!-- end homepage hero -->
 
 <!-- first sliding black bar
-   ================================================== -->
-<section id="home-howitworks" class="gallery-home sectionblack">
+   ==================================================
+<section id="home-howitworks" class="gallery-home sectionblack"> -->
   <!--
     <div class="container title">
         <p>DESCARGA LA APP</p>
     </div>
-  -->
 </section>
+-->
 
 <!-- homepage how-it-works
    ================================================== -->
 <section id="home-intro">
 
     <div class="intro-unit module parallax parallax-2">
-        <h1>Descarga el app</p>
+        <h1>Descarga la app</h1>
         <div class="row">
-            <!-- <div class="col-lg-6 col-md-6 col-sm-6 howitworks__column">
-                <img src="/images/iphone_left.png" alt="" />
-            </div> -->
-            <div class="col-lg-12 col-md-12 col-sm-12 howitworks__column">
+            <div class="col-lg-6 col-md-6 col-sm-6 howitworks__column">
+                <img src="/images/iphone_info.png" alt="" />
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 howitworks__column">
                 <img src="/images/iphone_right.png" id="iphone" alt="" />
             </div>
         </div>
@@ -42,129 +42,115 @@
 </section> <!-- end homepage how-it-works -->
 
 <!-- second sliding black bar
-   ================================================== -->
-<section id="home-services" class="gallery-home sectionblack">
+   ==================================================
+<section id="home-services" class="gallery-home sectionblack"> -->
   <!--
     <div class="container title">
         <p>SERVICIOS</p>
     </div>
-  -->
-</section> <!-- second sliding black bar -->
+</section>--> <!-- second sliding black bar -->
 
 <!-- homepage services
    ================================================== -->
 <section id="services">
-<div class="container">
-  <h1>Elige tu servicio</p>
-  <div class="row seven-cols">
+  <div class="row">
+        <div class="col-md-6 col-xs-12">
+              <div class="row">
+                  <div class="col-xs-3" id="cs-haircuts">
+                      <div class="staff-photo">
+                          <img src="/images/deluxe_web-06.png">
+                      </div>
 
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6" id="cs-haircuts">
-      <div class="staff-photo">
-        <img src="/images/deluxe_web-05.png">
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            CORTES
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-3" id="cs-hairstyles">
+                      <div class="staff-photo">
+                          <img src="/images/deluxe_web-05.png">
+                      </div>
+
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            PEINADOS
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-3">
+                      <div class="staff-photo" id="cs-hair-treatments">
+                          <img src="/images/deluxe_web-10.png">
+                      </div>
+
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            TRATAMIENTOS
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-3">
+                      <div class="staff-photo" id="cs-makeups">
+                          <img src="/images/deluxe_web-09.png">
+                      </div>
+
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            MAQUILLAJE
+                          </div>
+                      </div>
+                  </div>
+            </div>
+      </div> 
+      <div class="col-md-6 col-xs-12">
+              <div class="row">
+                  <div class="col-xs-3">
+                      <div class="staff-photo" id="cs-manicures">
+                          <img src="/images/deluxe_web-08.png">
+                      </div>
+
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            BARBERIA
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-3">
+                      <div class="staff-photo" id="cs-pedicures">
+                          <img src="/images/deluxe_web-07.png">
+                      </div>
+
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            MANICURE
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-3">
+                      <div class="staff-photo" id="cs-beards">
+                          <img src="/images/deluxe_web-06.png">
+                      </div>
+
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            PEDICURE
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xs-3">
+                      <div class="staff-photo" id="cs-kids">
+                          <img src="/images/deluxe_web-05.png">
+                      </div>
+
+                      <div class="staff-name">
+                          <div class="staff-first-name">
+                            KIDS
+                          </div>
+                      </div>
+                  </div>
+            </div>
       </div>
-
-      <div class="staff-name">
-        <div class="staff-first-name">
-          CORTES
-        </div>
-        <div class="staff-second-name">
-          $500
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo" id="cs-hairstyles">
-        <img src="/images/deluxe_web-06.png">
-      </div>
-
-      <div class="staff-name">
-        <div class="staff-first-name">
-          PEINADOS
-        </div>
-        <div class="staff-second-name">
-          $650
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo" id="cs-hair-treatments">
-        <img src="/images/deluxe_web-07.png">
-      </div>
-
-      <div class="staff-name">
-        <div class="staff-first-name">
-          TRATAMIENTO
-        </div>
-        <div class="staff-second-name">
-          $1000
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo" id="cs-makeups">
-        <img src="/images/deluxe_web-08.png">
-      </div>
-
-      <div class="staff-name">
-        <div class="staff-first-name">
-          MAQUILLAJE
-        </div>
-        <div class="staff-second-name">
-          $1200
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo" id="cs-manicures">
-        <img src="/images/deluxe_web-09.png">
-      </div>
-
-      <div class="staff-name">
-        <div class="staff-first-name">
-          BARBA
-        </div>
-        <div class="staff-second-name">
-          $400
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
-      <div class="staff-photo" id="cs-pedicures">
-        <img src="/images/deluxe_web-10.png">
-      </div>
-
-      <div class="staff-name">
-        <div class="staff-first-name">
-          MANICURES
-        </div>
-        <div class="staff-second-name">
-          $250
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6 last__service">
-      <div class="staff-photo" id="cs-beards">
-        <img src="/images/deluxe_web-05.png">
-      </div>
-
-      <div class="staff-name">
-        <div class="staff-first-name">
-          PEDICURES
-        </div>
-        <div class="staff-second-name">
-          $350
-        </div>
-      </div>
-    </div>
-
   </div>
-</div>
 </section> <!-- end homepage services -->
 
 <!-- homepage carousel
