--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -161,7 +161,7 @@
             <div class="owl-carousel owl-theme">
                 <div class="item"><img class="item-img" src="/images/cs-haircuts-1.png"></div>
                 <div class="item"><img class="item-img" src="/images/cs-beards-1.png"></div>
-                <div class="item"><img class="item-img" src="/images/cs-haircuts-1.png"></div>
+                <div class="item"><img class="item-img" src="/images/cs-hair-treatments-1.png"></div>
                 <div class="item"><img class="item-img" src="/images/cs-hairstyles-1.png"></div>
                 <div class="item"><img class="item-img" src="/images/cs-makeups-1.png"></div>
             </div>
@@ -172,6 +172,27 @@
         </div>
 
 </section>
+
+<!-- homepage appointments
+   ================================================== -->
+<section id="home-appointments">
+  <div class="row">
+        <div class="col-md-5 col-xs-12 appointments__text__left">
+          <h2>Agenda tu cita</h2>
+          <p>En la ubicación de tu preferencia. Dentro de la Ciudad de México y zona metropolitana.</p>
+          <p>Vamos a tu casa, oficina, hotel, o cualquier lugar que sea de tu comodidad.</p>
+        </div>
+        <div class="col-md-2 col-xs-12 appointments__text__middle">
+          <h1>CITAS</h1>
+        </div>
+        <div class="col-md-5 col-xs-12 appointments__text__right">
+          <h2>Vive la experiencia DELUXE</h2>
+          <p>Nuestros servicios profesionales ofrecen una experiencia única de lujo y comodidad</p>
+          <p>¡Déjanos sorprenderte!</p>
+          <p>Garantía de profesionalismo y confiabilidad.</p>
+        </div>
+  </div>
+</section> <!-- end homepage how-it-works -->
 
 <!-- homepage how-it-works
    ================================================== -->
