--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -198,8 +198,18 @@
    ================================================== -->
 <section id="home-pricing">
      <div class="container">
-        <h1>PRECIOS</h1>
-        <img src='/images/pricing.png'></div>
+        <h1>PRECIOS</h1><br>
+        <div class="row">
+              <div class="col-md-4 col-xs-12">
+                <img src='/images/pricing_hair.png'>
+              </div>
+              <div class="col-md-4 col-xs-12">
+                <img src='/images/pricing_makeup_beard.png'>
+              </div>
+              <div class="col-md-4 col-xs-12">
+                <img src='/images/pricing_nails.png'>
+              </div>
+        </div>
     </div>
 </section> <!-- end homepage how-it-works -->
 
