Add Be Deluxe section

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -217,33 +217,20 @@
    ================================================== -->
 <section id="home-contact" class="gallery-home sectionblack">
     <div class="container title">
-        <p>CONTACTO</p>
     </div>
 </section>
 
 <!-- contact form
    ================================================== -->
 <section id="contact-form">
-
-    <div class="contact-unit">
-        <div class="row">
-            <div class="bottom-align-text col-lg-6 col-md-6 col-sm-6">
-              <h1><a href='https://docs.google.com/forms/d/e/1FAIpQLSd5pwMKoEMX8ek5Lzt2vUFcaZen0de03s3fc0WI42PvqmXd-g/viewform'>BOLSA DE TRABAJO</a></h1>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                  <form action="#">
-                  <input type="text" name="Nombre" placeholder="Nombre"><br>
-                  <br>
-                  <input type="text" name="Email" placeholder="Email"><br>
-                  <br>
-                  <textarea cols="50" rows ="10" name="Mensaje" value="Mensaje" placeholder="Mensaje"></textarea><br>
-                  <br>
-                  <input type="submit" value="Enviar">
-                </form>
-            </div>
-        </div>
+  <div class="contact-container">
+    <img src="/images/be_deluxe.png">
+    <h1>Forma parte de nuestro equipo</h1>
+    <div class="form-text">
+      <p>Llena el formulario y nos pondremos en contacto para realizar una entrevista y puedas ser parte de nuestros profesionales.</p>
     </div>
-
+    <a href="#" class="btn-contact" data-toggle="modal" data-target="#contactModal">APLICA</a>
+  </div>
 </section> <!-- end homepage contact form -->
 
 <!-- job openings link mobile
