--- a/public/css/main.css
+++ b/public/css/main.css
@@ -403,6 +403,49 @@ html, body {
   max-width: 90%;
 }
 
+#contact-form {
+  padding: 100px 0;
+  background-color: #000;
+}
+
+#contact-form .contact-container{
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#contact-form h1 {
+  font-size: 30px;
+}
+
+#contact-form .form-text {
+  text-align: center;
+  padding: 30px;
+  margin: 30px 0;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  border-color: #f2e28a;
+}
+
+#contact-form .form-text p {
+  font-family: 'lato', sans-serif;
+  font-size: 30px;
+  color: #868686;
+  line-height: 30px;
+}
+
+#contact-form .btn-contact {
+  display: block;
+  width: 100%;
+  color: #000;
+  text-align: center;
+  background: -webkit-linear-gradient(transparent, transparent), -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
+  border: 2px solid;
+  padding: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
 #myCarousel {
   width: 70%;
   margin-left: auto;
@@ -665,7 +708,7 @@ html, body {
   }
 
   .intro-unit {
-    height: 140vh;
+  //  height: 140vh;
   }
 
   .intro-unit .row {
