--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,7 +15,7 @@ img {
 }
 
 h1 {
-  font-family: 'lato', sans-serif;
+  font-family: 'raleway', sans-serif;
   font-weight: 100;
   font-size: 50px;
   text-align: center;
@@ -27,11 +27,16 @@ h1 {
 }
 
 h2 {
-  font-family: sans-serif;
+  font-family: 'raleway', sans-serif;
   font-weight: 100;
   font-size: 20px;
   text-align: center;
   color:  #b59b1c;
+}
+
+p {
+  font-family: 'raleway', sans-serif;
+  font-weight: 100;
 }
 
 
@@ -124,7 +129,7 @@ section.module.parallax-3 {
 
 .staff-first-name {
   margin: 50px 0 50px 0;
-  font-family: 'lato';
+  font-family: 'raleway';
   font-size: large;
   font-weight: 100;
   text-align: center;
@@ -137,7 +142,7 @@ section.module.parallax-3 {
 }
 
 .staff-second-name {
-  font-family: 'lato';
+  font-family: 'raleway';
   font-style: italic;
   font-size: large;
   font-weight: 100;
@@ -216,7 +221,7 @@ html, body {
 }
 
 .sectionblack .title p {
-  font-family: 'lato';
+  font-family: 'raleway';
   font-weight: 100;
   font-size: 3em;
   color: white;
@@ -259,16 +264,16 @@ html, body {
 .intro-unit h1 {
   text-align: center;
   color: #FFF;
-  font-family: 'lato';
+  font-family: 'raleway';
   font-size: 8rem;
-  font-weight: 100;
+  font-weight: 400;
   margin: 0;
 }
 
 .intro-unit p {
   margin: 20px;
   color: #FFF;
-  font-family: 'lato';
+  font-family: 'raleway';
   font-style: italic;
   font-size: 20px;
 }
@@ -428,7 +433,7 @@ html, body {
 }
 
 #contact-form .form-text p {
-  font-family: 'lato', sans-serif;
+  font-family: 'raleway', sans-serif;
   font-size: 30px;
   color: #868686;
   line-height: 30px;
@@ -441,6 +446,7 @@ html, body {
   text-align: center;
   background: -webkit-linear-gradient(transparent, transparent), -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
   border: 2px solid;
+  border-radius: 0;
   padding: 10px;
   text-transform: uppercase;
   letter-spacing: 0.2em;
@@ -464,7 +470,7 @@ html, body {
 
   .hero-unit h1 {
     text-align: left;
-    font-family: 'lato';
+    font-family: 'raleway';
     font-weight: 100;
     font-size: 9rem;
     color: #000;
@@ -491,8 +497,8 @@ html, body {
 /* Large desktop */
 @media (min-width: 1200px) and (max-width: 1649px) {
   .hero-unit h1 {
-    font-family: 'lato';
-    font-weight: 100;
+    font-family: 'raleway';
+    font-weight: 500;
     font-size: 8vw;
     color: #000;
     position: absolute;
@@ -521,7 +527,7 @@ html, body {
 
   .hero-unit h1 {
     text-align: left;
-    font-family: 'lato';
+    font-family: 'raleway';
     font-weight: 100;
     font-size: 10vw;
     color: #000;
@@ -557,7 +563,7 @@ html, body {
 
   .hero-unit h1 {
     text-align: left;
-    font-family: 'lato';
+    font-family: 'raleway';
     font-weight: 100;
     font-size: 10vw;
     color: #000;
@@ -646,7 +652,7 @@ html, body {
 
   .hero-unit h1 {
     text-align: left;
-    font-family: 'lato';
+    font-family: 'raleway';
     font-weight: 100;
     font-size: 10vw;
     color: #000;
@@ -683,7 +689,7 @@ html, body {
 
   .hero-unit h1 {
     text-align: left;
-    font-family: 'lato';
+    font-family: 'raleway';
     font-weight: 100;
     font-size: 12vw;
     color: #000;
@@ -788,8 +794,8 @@ html, body {
   FOOTER STYLES
 ============================================================ */
 footer {
-  font-family: 'lato';
-  font-weight: 200;
+  font-family: 'raleway';
+  font-weight: 100;
   font-size: large;
   background-color: rgb(60, 60, 60);
   color: #FFF;
@@ -871,4 +877,56 @@ footer > div > p {
   #footer-social-icons{
     margin-left: 18vw;
   }
+}
+
+/* ============================================================
+MODALS
+============================================================ */
+.modal-xl {
+  width: 90%;
+  max-width:1200px;
+}
+
+.modal-content {
+ border-radius: 0;
+}
+
+.modal-body {
+  background-color: #000;
+  background-image: url('/images/be_deluxe_bg.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.modal-body .modal-rightside {
+  width: 50%;
+  margin: 100px 45%;
+}
+
+.modal-body .modal-rightside p {
+  margin-top: 10px;
+  line-height: 10px;
+  font-size: 20px;
+  color: #96743d;
+}
+
+.modal-body .flush-right {
+  text-align: right;
+}
+
+.modal-body form button {
+  width: 100%;
+  background: -webkit-linear-gradient(transparent, transparent), -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
+  border: 2px solid;
+  border-radius: 0;
+  font-size: 20px;
+}
+
+.modal-body .form-control {
+  background-color: #000;
+  background-color: #000;
+  border-radius: 0;
+  border-color: #f2e28a;
+  border-right: none;
+  border-left: none;
 }
